--- a/templates/login.html
+++ b/templates/login.html
@@ -17,7 +17,7 @@
 
     <br>
 
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-info">Login</button>
 
   </form>
 
