--- a/templates/signup.html
+++ b/templates/signup.html
@@ -23,7 +23,7 @@
 
     <br>
 
-    <button type="submit" class="btn btn-primary">Sign Up</button>
+    <button type="submit" class="btn btn-info">Sign Up</button>
 
   </form>
 
