--- a/templates/student_dashboard.html
+++ b/templates/student_dashboard.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %} {% import 'macros.html' as macros %}
-{% set nav_tabs = [("Home", "/dashboard/student/courses"), ("Profile", "/dashboard/student/profile"), ("Log out", "/logout")] %}
+{% set nav_tabs = [("Home", "/dashboard/student/courses"), ("Profile", "/dashboard/student/profile"), ("Sign Out", "/logout")] %}
 {% set active_tab = "Home" %}
 {% block content %}
 
