--- a/templates/student_search_dashboard.html
+++ b/templates/student_search_dashboard.html
@@ -15,10 +15,7 @@
         text-align: left;
         padding: 8px;
     }
-
-    /* #searchResultsDiv {
-        min-height: 80%;
-    } */
+    
 </style>
 
 <script>
@@ -68,7 +65,7 @@
                 <span class="input-group-text" id="addon-wrapping">CRN</span>
             </div>
 
-            <input type="number" id="searchBox" class="form-control" placeholder="Search for course here"
+            <input type="number" id="searchBox" class="form-control" placeholder="Search course here:"
                 aria-label="Search for course here" aria-describedby="addon-wrapping">
         </div>
 
