--- a/templates/instructor_session_dashboard.html
+++ b/templates/instructor_session_dashboard.html
@@ -4,65 +4,75 @@
 {% block content %}
 
 <style>
-  #AddQuestionForm{
-  	display: none;
-      width: 300px;
-      border: 1px solid #ccc;
-      padding: 14px;
-      background: #ececec;
+  #AddQuestionForm {
+    display: none;
+    width: 100%;
+    /* height: 50%; */
+    border: 0px;
+    padding: 5px;
+    background: #333;
   }
+
   table {
     font-family: arial, sans-serif;
     border-collapse: collapse;
     width: 100%;
   }
-  td, th {
+
+  td,
+  th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 8px;
   }
-
 </style>
 
 <script>
-$(document).ready(function(){
-	$('#AddQuestionButton').click(function(){
-  		$('#AddQuestionForm').toggle(500);
+  $(document).ready(function () {
+    $('#AddQuestionButton').click(function () {
+      $('#AddQuestionForm').toggle(500);
+    });
   });
-});
-
-
 </script>
 
 
-<main role="main" class="inner cover">
-    <h2 class="cover-heading">Questions for {{date}}</h2>
+<main role="main">
+
+  <div class="container-fluid">
+
+    <h1 class="cover-heading">Questions for {{date}}</h1>
+    <br>
+
     {% for q in questions %}
     <div onclick="location.href='/dashboard/instructor/question/{{q.id}}';"
-         style="cursor: pointer; background-color: #505c61; padding:10px; margin-bottom:10px;">
-        {% if q.schemas is not none %}
-        <div style="color:#7a9fab;">
-            <p style="font-family:monospace">Schemas:
-                <!--schemas is stored (in db) in the format of: Employee(id,name,gender,salary)|Project(id,name)-->
-                {% for schema in q.schemas.split("|") %}
-                <br>{{schema}}
-                {% endfor %}
-            </p>
-        </div>
-        {% endif %}
-        <p>{{q.question}}</p>
+      style="cursor: pointer; background-color: #505c61; padding:10px; margin-bottom:10px;">
+      {% if q.schemas is not none %}
+      <div style="color:#7a9fab;">
+        <p style="font-family:monospace"><strong>Schema(s):</strong>
+          <br>
+          <!--schemas is stored (in db) in the format of: Employee(id,name,gender,salary)|Project(id,name)-->
+          {% for schema in q.schemas.split("|") %}
+          <br>{{schema}}
+          {% endfor %}
+        </p>
+      </div>
+      {% endif %}
+      <p>{{q.question}}</p>
     </div>
     {% endfor %}
+    <br>
 
-    <button id="AddQuestionButton" class="btn btn-primary">Add Question</button>
+    <button id="AddQuestionButton" class="btn btn-info">Add Question</button>
+
     <form id="AddQuestionForm" action="/dashboard/instructor/question/" method="post">
-        {{ add_question_form.hidden_tag() }}
-        {{ macros.render_field(add_question_form.CRN, value=CRN, label_visible=false, hidden=true) }}
-        {{ macros.render_field(add_question_form.question_date, value=date, label_visible=false, hidden=true) }}
-        {{ macros.render_field(add_question_form.schemas, placeholder='e.g. Employee(id,name,gender)|Project(id,name,budget)', label_visible=true) }}
-        {{ macros.render_field(add_question_form.question, placeholder='', label_visible=true) }}
-        <button type="submit" class="btn btn-default">Submit</button>
+      {{ add_question_form.hidden_tag() }}
+      {{ macros.render_field(add_question_form.CRN, value=CRN, label_visible=false, hidden=true) }}
+      {{ macros.render_field(add_question_form.question_date, value=date, label_visible=false, hidden=true) }}
+      {{ macros.render_field(add_question_form.schemas, placeholder='e.g. Employee(id,name,gender)|Project(id,name,budget)', label_visible=true) }}
+      {{ macros.render_field(add_question_form.question, placeholder='', label_visible=true) }}
+      <button type="submit" class="btn btn-info">Submit</button>
     </form>
+  </div>
 </main>
 
 
