update about page and nav bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <!-- css -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/styles/style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
     <!-- js -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
@@ -50,7 +51,7 @@
       <!-- footer -->
       <footer class="mastfoot mt-auto">
           <div class="inner">
-            <p>Copyright © 2019 by Team SmileyFace @ Illinois CS411</p>
+            <p>Copyright © 2019 by Team <a href='https://wiki.illinois.edu/wiki/pages/viewpage.action?pageId=689152728'>SmileyFace</a> @ Illinois CS411</p>
           </div>
         </footer>
 
