--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %} {% import 'macros.html' as macros %}
+{% set nav_tabs = [("Home", "/index"), ("About", "/about")] %}
+{% set active_tab = "Home" %}
 {% block content %}
 
 <main role="main" class="inner cover">
