--- a/templates/profile.html
+++ b/templates/profile.html
@@ -15,7 +15,7 @@
 <main role="main" class="inner cover">
     <div class="jumbotron">
         <h1 class="display-4">{{user.name}}</h1>
-        <p class="lead">User Type: {{user.type}}</p>
+        <p class="lead">User Type: {{user.user_type}}</p>
         <p class="lead">Email: {{user.email}}</p>
 
         <hr>
