--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %} {% import 'macros.html' as macros %}
+{% set nav_tabs = [("Home", "/index"), ("About", "/about")] %}
 {% block content %}
 
 <main role="main" class="inner cover">
