--- a/templates/instructor_dashboard.html
+++ b/templates/instructor_dashboard.html
@@ -80,7 +80,7 @@
           <th scope="col">Year</th>
           <th scope="col">Term</th>
           <th scope="col">Chatroom</th>
-					<th scope="col">Delete course</th>
+					<th scope="col">Delete Course</th>
         </tr>
       </thead>
       <tbody>
@@ -90,11 +90,11 @@
           <td><a href="/dashboard/instructor/course/{{c.CRN}}">{{ c.title }}</a></td>
           <td>{{ c.year }}</td>
           <td>{{ c.term }}</td>
-          <td><button class="btn btn-warning" onclick="window.open('/chatroom/{{c.CRN}}','_blank')">Enter
-              chatroom</button></td>
+          <td><button class="btn btn-warning btn-sm" onclick="window.open('/chatroom/{{c.CRN}}','_blank')">
+              enter</button></td>
 					<td>
 							<form action="/course/delete/{{c.CRN}}" method="post">
-		    					<button class="btn btn-warning" name="forwardBtn" type="submit">Delete course</button>
+		    					<button class="btn btn-danger btn-sm" name="forwardBtn" type="submit">delete</button>
 							</form>
 					</td>
         </tr>
