update README and modified buttons

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,7 +24,7 @@
             {{ update_profile_form.hidden_tag() }}
             {{ macros.render_field(update_profile_form.name, value= user.name, label_visible=true) }}
             {{ macros.render_field(update_profile_form.email, value= user.email, label_visible=true) }}
-            <button type="submit" class="btn btn-info">Submit</button>
+            <button type="submit" class="btn btn-info">Change</button>
         </form>
     </div>
 </main>
