--- a/templates/student_search_dashboard.html
+++ b/templates/student_search_dashboard.html
@@ -44,7 +44,7 @@
                         <td>${course['year']}</td>
                         <td>${course['term']}</td>
                         <td>${course['instructor']}</td>
-                        <td><button class='btn btn-info registerBtn' data-crn="${course['CRN']}"=>Register</button></td>
+                        <td><button class='btn btn-warning btn-sm registerBtn' data-crn="${course['CRN']}"=>Register</button></td>
                     </tr>`
                     );
                 }
