--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
       <img src="https://avatars3.githubusercontent.com/u/19180693?s=60&amp;v=4" class="avatar mr-3" alt="" width="38" height="38">
       <div class="media-body">
         <h5 class="mt-0 mb-1">Angelica Li</h5>
-        Some fun fact about yourself!
+        She really wants to climb trees recently!
       </div>
     </li>
 
