--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Course Chatroom</title>
+    <title>{{ title }}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata" rel="stylesheet">
