--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -7,7 +7,7 @@
 }
 
 .color-channel-test {
-  background-color: #171C2F;
+  background-color: #333333;
 }
 
 .comment-media:hover {
@@ -33,8 +33,8 @@
 }
 
 .channel-input .add-button {
-  color: #8C93B3;
-  background-color: #171C2F;
+  color: rgba(227, 232, 219, 0.97);
+  background-color: #333333;
 }
 
 .message-input {
@@ -46,13 +46,13 @@
 }
 
 .message-input .add-button {
-  color: #8C93B3;
-  background-color: #171C2F;
+  color: #e3e8db;
+  background-color: #333333;
 }
 
 .btn:disabled {
-  color: #8C93B3;
-  background-color: #171C2F;
+  color: #e3e8db;
+  background-color: #333333;
   opacity: 1.0;
 }
 
@@ -64,7 +64,7 @@ body {
 }
 
 #user {
-  color: #8C93B3;
+  color: #e3e8db;
   margin-top: 20px;
   margin-left: 3px;
   font-family: arial, sans-serif;
@@ -72,7 +72,7 @@ body {
 }
 
 #channel-heading {
-  color: #8C93B3;
+  color: #e3e8db;
   font-family: arial, sans-serif;
   font-size: 200%;
 }
@@ -83,8 +83,8 @@ body {
 }
 
 .add-button:hover {
-  color: #171C2F;
-  background-color: #8C93B3;
+  color: #333333;
+  background-color: #e3e8db;
 }
 
 ul {
@@ -95,7 +95,7 @@ ul {
 }
 
 ul li {
-  color: #8C93B3;
+  color: #ffffff;
   font-size: 120%;
 }
 
@@ -110,11 +110,11 @@ ul li {
 }
 
 #switch-channel-form:hover {
-  background-color: #8C93B3 !important;
+  background-color: #333333 !important;
 }
 
 #switch-channel-form:hover #channel-option {
-  color: #171C2F !important;
+  color: #ffffff !important;
 }
 
 #submit-switch-channel {
@@ -155,18 +155,18 @@ h5,
 
 .comment-container .comment-item .comment-user {
   font-size: 131%;
-  color: black;
+  color: #333333;
   font-family: arial, sans-serif;
 }
 
 .comment-container .comment-item .comment-comment {
   font-size: 79%;
-  color: black;
+  color: #333333;
   font-family: arial, sans-serif;
 }
 
 .comment-container .comment-item .comment-time {
   font-size: 79%;
-  color: black;
+  color: #333333;
   font-family: arial, sans-serif;
 }
