--- a/templates/about.html
+++ b/templates/about.html
@@ -32,8 +32,8 @@
     <li class="media my-4">
       <img src="https://avatars0.githubusercontent.com/u/22734444?s=60&amp;v=4" class="avatar mr-3" alt="" width="38" height="38">
       <div class="media-body">
-        <h5 class="mt-0 mb-1">Wang Bo</h5>
-        Some fun fact about yourself!
+        <h5 class="mt-0 mb-1">Bo Wang</h5>
+        A professional racing driver and chef.
     </li>
 
     <!-- Xinye Yang -->
@@ -48,7 +48,7 @@
     <p><small>Visit our <a  href='https://github.com/zhang13music/Peer-Learning' title="Github"><i class="fab fa-github"></i></a> repo for more information.</small></p>
 
   </ul>
-  
+
 </main>
 
 {% endblock %}
