--- a/templates/student_search_dashboard.html
+++ b/templates/student_search_dashboard.html
@@ -62,11 +62,11 @@
 
         <div style="width: 50%; text-shadow: none;" class="input-group flex-nowrap">
             <div class="input-group-prepend">
-                <span class="input-group-text" id="addon-wrapping">CRN</span>
+                <span class="input-group-text" id="addon-wrapping">Search</span>
             </div>
 
-            <input type="number" id="searchBox" class="form-control" placeholder="Search course here:"
-                aria-label="Search for course here" aria-describedby="addon-wrapping">
+            <input type="text" id="searchBox" class="form-control" placeholder="CRN / Title / Instructor"
+                aria-label="CRN / Title / Instructor" aria-describedby="addon-wrapping">
         </div>
 
         <br>
