--- a/templates/about.html
+++ b/templates/about.html
@@ -41,7 +41,7 @@
       <img src="https://avatars1.githubusercontent.com/u/26752757?s=60&amp;v=4" class="avatar mr-3" alt="" width="38" height="38">
       <div class="media-body">
         <h5 class="mt-0 mb-1">Xinye Yang</h5>
-        Some fun fact about yourself!
+        My daily tooth-brushing routine takes about half an hour!
       </div>
     </li>
 
