--- a/templates/profile.html
+++ b/templates/profile.html
@@ -24,6 +24,7 @@
             {{ update_profile_form.hidden_tag() }}
             {{ macros.render_field(update_profile_form.name, value= user.name, label_visible=true) }}
             {{ macros.render_field(update_profile_form.email, value= user.email, label_visible=true) }}
+            {{ macros.render_field(update_profile_form.password, value= user.password, label_visible=true) }}
             <button type="submit" class="btn btn-info">Change</button>
         </form>
     </div>
