--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -26,6 +26,7 @@ a:hover {
   text-align: left;
 }
 
+
 /*
  * Base structure
  */
@@ -36,11 +37,21 @@ body {
   background-color: #333;
 }
 
-body {
+/* body {
   display: flex;
   color: #fff;
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
   box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  overflow: auto;
+} */
+
+#bodyWrapper{
+  height: 100%;
+  display: flex;
+  color: #fff;
+  text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
+  box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+  overflow: auto;
 }
 
 .cover-container {
