--- a/templates/base.html
+++ b/templates/base.html
@@ -1,60 +1,67 @@
 <html lang="en">
 
-  <head>
+<head>
 
-    <!-- meta -->
-    <title>Peer Learning</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-  
-    <!-- css -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/styles/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+  <!-- meta -->
+  <title>Peer Learning</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- js -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-    
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-  </head>
+  <!-- css -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="/static/styles/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
-  <body>
-    
+  <!-- js -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous">
+  </script>
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
+
+<body>
+  <div id="bodyWrapper">
     <!-- container -->
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 
       <!-- header -->
       <header class="masthead mb-auto">
-          <div class="inner">
-            <h3 class="masthead-brand">Peer Learning</h3>
-            <nav class="nav nav-masthead justify-content-center">
-              {% if nav_tabs is not defined %}
-                <a class="nav-link active" href="/index">Home</a>
-              {% else %}
-                {% for text, href in nav_tabs %}
-                  {% if active_tab == text %}
-                      <a class="nav-link active" href="{{href}}">{{text}}</a>
-                  {% else %}
-                      <a class="nav-link" href="{{href}}">{{text}}</a>
-                  {% endif %}
-                {% endfor %}
-              {% endif %}
-            </nav>
-          </div>
-        </header>
+        <div class="inner">
+          <h3 class="masthead-brand">Peer Learning</h3>
+          <nav class="nav nav-masthead justify-content-center">
+            {% if nav_tabs is not defined %}
+            <a class="nav-link active" href="/index">Home</a>
+            {% else %}
+            {% for text, href in nav_tabs %}
+            {% if active_tab == text %}
+            <a class="nav-link active" href="{{href}}">{{text}}</a>
+            {% else %}
+            <a class="nav-link" href="{{href}}">{{text}}</a>
+            {% endif %}
+            {% endfor %}
+            {% endif %}
+          </nav>
+        </div>
+      </header>
 
       {% block content %} {% endblock %}
-    
+
       <!-- footer -->
       <footer class="mastfoot mt-auto">
-          <div class="inner">
-            <p>Copyright © 2019 by Team <a href='https://wiki.illinois.edu/wiki/pages/viewpage.action?pageId=689152728'>SmileyFace</a> @ Illinois CS411</p>
-          </div>
-        </footer>
-
+        <div class="inner">
+          <p>Copyright © 2019 by Team <a
+              href='https://wiki.illinois.edu/wiki/pages/viewpage.action?pageId=689152728'>SmileyFace</a> @ Illinois
+            CS411</p>
+        </div>
+      </footer>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
