update query analysis text style

--- a/templates/query_analysis.html
+++ b/templates/query_analysis.html
@@ -36,6 +36,8 @@ h4 {
 .block {
   border-radius: 20px;
   background-color: #6b8f90;
+  color: white;
+  text-shadow: none;
   width:500;
   margin:auto;
   padding:10px;
