--- a/templates/query_analysis.html
+++ b/templates/query_analysis.html
@@ -16,6 +16,7 @@ table {
 
 td, th {
   border: 1px solid #dddddd;
+  color: #fff;
   text-align: left;
   padding: 8px;
 }
@@ -36,8 +37,6 @@ h4 {
 .block {
   border-radius: 20px;
   background-color: #6b8f90;
-  color: white;
-  text-shadow: none;
   width:500;
   margin:auto;
   padding:10px;
